# bazel-experiments

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  main.go  main_test.go  wasm.bzl
host/: BUILD.bazel  host.go  language.go  memory.go
plugin/: BUILD.bazel  plugin.go
plugin/gazelle_go/: BUILD.bazel  memory.go  plugin_src.go
plugin/wasm/: BUILD.bazel  plugin_src.go
scripts/: benchmark.sh
wazero_wrapper/: BUILD.bazel  wazero.go
