load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "bazel-experiments_lib",
    srcs = ["main.go"],
    importpath = "github.com/bytebard.software/bazel-experiments",
    visibility = ["//visibility:private"],
    deps = [
        "//plugin",  #keep
        "//wazero_wrapper",
    ],
)

go_binary(
    name = "bazel-experiments",
    embed = [":bazel-experiments_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bazel-experiments_test",
    srcs = ["main_test.go"],
    embed = [":bazel-experiments_lib"],
    deps = [
        "//host",
        "//plugin",
        "//wazero_wrapper",
    ],
)

gazelle_binary(
    name = "my_gazelle_binary",
    languages = [
        "//host:host",
    ],
    visibility = ["//visibility:public"],
)

gazelle(name = "gazelle")

gazelle(
    name = "gazelle_with_wasm",
    gazelle = ":my_gazelle_binary",
)
