load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "plugin",
    srcs = ["plugin.go"],
    embedsrcs = [
        # "//plugin/wasm:wasm",  #keep
        "//plugin/wasm:language_wasm",  #keep
    ],
    importpath = "github.com/bytebard.software/bazel-experiments/plugin",
    visibility = ["//visibility:public"],
)
