load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wasm_lib",
    srcs = [
        "plugin_src.go",
    ],
    importpath = "github.com/bytebard.software/bazel-experiments/plugin/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
        "@gazelle//language/go",
    ],
)

go_binary(
    name = "wasm_bin",
    embed = [":wasm_lib"],
    goarch = "wasm",
    goos = "wasip1",
    linkmode = "c-shared", # Necessary to generate an _initialize function instead of a _start one: https://go.dev/blog/wasmexport#building-a-wasi-reactor
)

genrule(
    name = "language_wasm",
    srcs = [":wasm_bin"],
    outs = ["language.wasm"],
    cmd = "mv $< $@",
    visibility = ["//visibility:public"],
)
