load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//:wasm.bzl", "compile_to_wasm")

compile_to_wasm(
    name = "wasm",
    srcs = [
        "language.go",
        "plugin_src.go",
    ],
    out = "plugin.wasm",
    visibility = ["//visibility:public"],
)

go_library(
    name = "wasm_lib",
    srcs = [
        "language.go",
        "plugin_src.go",
    ],
    importpath = "github.com/bytebard.software/bazel-experiments/plugin/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "@gazelle//config",
        "@gazelle//label",
        "@gazelle//language",
        "@gazelle//repo",
        "@gazelle//resolve",
        "@gazelle//rule",
    ],
)

go_binary(
    name = "wasm_bin",
    embed = [":wasm_lib"],
    goarch = "wasm",
    goos = "wasip1",
)

genrule(
    name = "language_wasm",
    srcs = [":wasm_bin"],
    outs = ["language.wasm"],
    cmd = "mv $< $@",
    visibility = ["//visibility:public"],
)
